--- a/dsgrid_project/datasets/benchmark/aeo2018/reference/commercial/floor_area/dimensions.toml
+++ b/dsgrid_project/datasets/benchmark/aeo2018/reference/commercial/floor_area/dimensions.toml
@@ -14,7 +14,7 @@
 # type = "sector"
 
 [[dimensions]]
-class = "SubSector"
+class = "Subsector"
 description = """EIA AEO construction types"""
 file = "dimensions/subsector_construction_types.csv"
 module = "dsgrid.dimension.standard"
