--- a/dsgrid_project/datasets/benchmark/aeo2018/reference/commercial/service_demand/dimensions.toml
+++ b/dsgrid_project/datasets/benchmark/aeo2018/reference/commercial/service_demand/dimensions.toml
@@ -14,8 +14,8 @@ name = "Commercial"
 type = "sector"
 
 [[dimensions]]
-class = "SubSector"
-description = """EIA AEO commercial service demand fuel types """
+class = "Subsector"
+description = """EIA AEO commercial service demand fuel types"""
 file = "dimensions/subsector_eia_aeo_comm_service_demand_fuel_types.csv"
 module = "dsgrid.dimension.standard"
 name = "AEO Commercial Service Demand Fuel Types"
@@ -23,8 +23,7 @@ type = "subsector"
 
 [[dimensions]]
 class = "EndUse"
-description = """EIA AEO commercial service demand end uses
-"""
+description = """EIA AEO commercial service demand end uses"""
 file = "dimensions/enduse_eia_aeo_commercial_service_demand.csv"
 module = "dsgrid.dimension.standard"
 name = "AEO Commercial Service Demand End Uses"
@@ -32,9 +31,7 @@ type = "end_use"
 
 [[dimensions]]
 class = "WeatherYear"
-description = """
-EIA AEO weather years: 2013 - 2050
-"""
+description = """EIA AEO weather years: 2013 - 2050"""
 file = "dimensions/weather_years_2013_to_2050.csv"
 module = "dsgrid.dimension.standard"
 name = "AEO Weather Years 2013-2050"
@@ -42,9 +39,7 @@ type = "weather_year"
 
 [[dimensions]]
 class = "ModelYear"
-description = """
-EIA AEO model years: 2013 - 2050
-"""
+description = """EIA AEO model years: 2013 - 2050"""
 file = "dimensions/model_years_2013_to_2050.csv"
 module = "dsgrid.dimension.standard"
 name = "AEO Model Years 2013-2050"
@@ -52,9 +47,7 @@ type = "model_year"
 
 [[dimensions]]
 class = "Scenario"
-description = """
-EIA AEO reference scenario
-"""
+description = """EIA AEO reference scenario"""
 file = "dimensions/scenario_eia_aeo_reference.csv"
 module = "dsgrid.dimension.standard"
 name = "AEO Reference"
@@ -62,9 +55,7 @@ type = "scenario"
 
 [[dimensions]]
 class = "DataSource"
-description = """
-EIA AEO 2018 electricity demand projection
-"""
+description = """EIA AEO 2018 electricity demand projection"""
 file = "dimensions/data_source_eia_aeo_2018.csv"
 module = "dsgrid.dimension.standard"
 name = "AEO 2018"
@@ -72,15 +63,13 @@ type = "data_source"
 
 [[dimensions]]
 class = "Time"
-description = """
-Time dimension, 2013 - 2050, annual
-"""
+description = """Time dimension, 2013 - 2050, annual"""
+start = "2013"
 end = "2050"
 frequency = "1 year"
 includes_dst = false
 name = "time-2013-2050-annual"
 period = "period_beginning"
-start = "2013"
 str_format = "%Y"
 timezone = "UTC" #none
 type = "time"
