Update date of county FIPS vintage for ResStock

--- a/dsgrid_project/datasets/sector_models/resstock/dimension_mappings.toml
+++ b/dsgrid_project/datasets/sector_models/resstock/dimension_mappings.toml
@@ -1,5 +1,5 @@
 [[mappings]]
-description = "Maps Resstock US Counties 2020 to dsgrid project counties"
+description = "Maps Resstock US Counties May 1, 2015 to dsgrid project counties"
 file = "dimension_mappings/resstock_county_to_dsgrid_county.csv"
 [mappings.from_dimension]
 dimension_id = ""
