--- a/dsgrid_project/dimensions.toml
+++ b/dsgrid_project/dimensions.toml
@@ -43,16 +43,6 @@ type = "sector"
 # """
 
 [[dimensions]]
-class = "WeatherYear"
-description = """
-Weather year, 2012 only
-"""
-file = "dimensions/weather_years.csv"
-module = "dsgrid.dimension.standard"
-name = "2012 Weather Year"
-type = "weather_year"
-
-[[dimensions]]
 class = "ModelYear"
 description = """
 Model year, 2010-2050, every other year
@@ -84,17 +74,16 @@ type = "data_source"
 
 [[dimensions]]
 class = "Time"
-end = "2012-12-31 23:59:59"
-frequency = "1 hour"
-includes_dst = false
+frequency = "P0DT1H0M0.000000S"
 name = "Time-2012-UTC-houlry-periodBeginning-noDST-noLeapDayAdjustment-mean"
-start = "2012-01-01 01:00:00"
+ranges = [{start = "2012-01-01 00:00:00", end = "2013-12-31 23:00:00"}]
 type = "time"
-# leap_day_adjustment = ""
+time_type = "datetime"
+leap_day_adjustment = "none"
 description = """
 Time dimension, 2012 hourly UTC, hour-beginning, no DST, no Leap Day Adjustment, mean value
 """
-period = "period_beginning"
+time_interval_type = "period_beginning"
 str_format = "%Y-%m-%d %H:%M:%S"
 timezone = "UTC"
-value_representation = "mean"
+measurement_type = "mean"
