--- a/dsgrid_project/datasets/sector_models/comstock/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/comstock/dataset.toml
@@ -3,11 +3,34 @@
 # --------------------------------------
 # TODO: ComStock contributors to fill out this config file
 
-dataset_id = "comstock-standard-scenarios-2021"
+dataset_id = "conus-2022-comstock"
 dataset_type = "sector_model"
-model_name = "ComStock"
-path = "s3://"
-description = """"""
+data_source = "ComStock"
+
+path = "/Users/dthom/.dsgrid-data/efs_comstock" # FIXME
+description = """
+Simulated on 09/29/2021 using: 
+Comstock SHA: 00a3f79bab74d7fb8b71e7897486eb54b51277fc and
+buildstock SHA: 9e00b5649c96ad18bc6336ba9b24c81156f8fd2d
+
+Post-processed using AWS ightGlass and notebooks from https://github.com/NREL/SightGlassDataProcessing/tree/agg_for_dsgrid
+"""
+
+
+origin_creator = "Lixi Liu"
+origin_organization = "NREL"
+origin_contributors = ["Marlena Praprost", "Lixi Liu", "Andrew Parker"]
+origin_project = "End Use Load Profiles"
+origin_date = "2021-09-29"
+origin_version = "0.1.0"
+source = "https://nrel.sharepoint.com/:u:/r/sites/dsgrid-load/Shared%20Documents/File%20Archive/fy17%20-%20OSP%20-%20Electrification%20Load%20Modeling/data/dsgrid_v0.2.0/data/commercial.dsg?csf=1&web=1&e=dU8Ogx" # FIXME
+data_classification = "low"
+tags = [ "commercial", "conus-2022", "dsgrid_v0.2.0", "standard_scenarios"]
+data_schema_type = "standard"
+trivial_dimensions = [ "weather_year", "model_year", "scenario", "data_source"]
+
+[data_schema]
+load_data_column_dimension = "metric"
 
 [[dimensions]]
 type = "geography"
