--- a/dsgrid_project/datasets/sector_models/comstock/dimensions.toml
+++ b/dsgrid_project/datasets/sector_models/comstock/dimensions.toml
@@ -1,19 +1,19 @@
 # ------------------------------------------------------
-# ComStock WY2012 MY2018 Standard Scenarios
+# ComStock WY2012 MY2018 Conus 2022
 # ------------------------------------------------------
 [[dimensions]]
 type = "geography"
-name = "standard_scenarios-comstock_US_county_FIP"
-file = "dimensions/standard_scenarios_comstock_geography.csv"
+name = "conus_2022-comstock_US_county_FIP"
+file = "dimensions/conus_2022-comstock_geography.csv"
 module = "dsgrid.dimension.standard"
 description = """
-Standard Scenarios - ComStock US county in original FIP code (N=3,060), ComStock not in 48 counties.
+CONUS 2022 - ComStock US county in original FIP code (N=3,060), ComStock not in 48 counties.
 """
 
-[[dimensions]] # FIXME trivial?
+[[dimensions]]
 type = "sector"
 name = "commercial-sector"
-file = "dimensions/xx.csv"
+file = "dimensions/sector_commercial.csv"
 module = "dsgrid.dimension.standard"
 class = "Sector"
 description = """
@@ -22,44 +22,42 @@ Commercial sector
 
 [[dimensions]]
 type = "subsector"
-name = "standard_scenarios-comstock_building_types"
-file = "dimensions/standard_scenarios_comstock_subsectors.csv"
+name = "conus_2022-comstock_building_types"
+file = "dimensions/conus_2022-comstock_subsectors.csv"
 module = "dsgrid.dimension.standard"
 class = "SubSector"
 description = """
-Standard Scenarios - Comstock building types
+CONUS 2022 - Comstock building types
 """
 
 [[dimensions]]
 type = "metric"
-name = "standard_scenarios-comstock_energy_enduses"
-file = "dimensions/standard_scenarios_comstock_end_uses.csv"
+name = "conus_2022-comstock_energy_enduses"
+file = "dimensions/conus_2022-comstock_end_uses.csv"
 module = "dsgrid.dimension.standard"
 class = "EnergyEndUse"
 description = """
-Standard Scenarios - Comstock end uses
+CONUS 2022 - Comstock end uses
 """
 
-[[dimensions]] # FIXME
+[[dimensions]]
 type = "scenario"
-name = "Standard-Scenarios"
-file = "dimensions/xxx.csv"
+name = "Conus-2022"
+file = "dimensions/scenario_conus_2022.csv"
 module = "dsgrid.dimension.standard"
 class = "Scenario"
 description = """
-Standard Scenarios
+Scenario: CONUS 2022
 """
 
-[[dimensions]] # FIXME # SHOW WE PUT SHA HERE? or in the dataset.toml
+[[dimensions]]
 type = "data_source"
-name = "Data-Source-comstock-2021"
-file = "dimensions/standard_scenarios_comstock_data_source.csv"
+name = "Data-Source-comstock"
+file = "dimensions/data_source_comstock.csv"
 module = "dsgrid.dimension.standard"
 class = "Model"
 description = """
-Comstock SHA: 00a3f79bab74d7fb8b71e7897486eb54b51277fc |
-buildstock SHA: 9e00b5649c96ad18bc6336ba9b24c81156f8fd2d
-Simulated on 09/29/2021
+Data source: comstock
 """
 
 [[dimensions]]
@@ -69,7 +67,7 @@ file = "dimensions/weather_year_2012.csv"
 module = "dsgrid.dimension.standard"
 class = "Weather"
 description = """
-Weather year - AMY 2012
+Weather year: AMY 2012
 """
 
 [[dimensions]]
@@ -79,17 +77,22 @@ file = "dimensions/model_year_2018.csv"
 module = "dsgrid.dimension.standard"
 class = "ModelYear"
 description = """
-Model year 2018
+Model year: 2018
 """
 
-[[dimensions]] # CHECK/FIX ME
-class = "Time"
-description = """Time 2012 UTC"""
-module = "dsgrid.dimension.standard"
-name = "Time-UTC-2012"
-measurement_type = "total"
-include_leap_day = true
+[[dimensions]]
+name = "Time-2012-UTC-hourly-periodEnding-DST-deopDec31-total-Hour5Start"
 type = "time"
-time_type = "hourly"
+module = "dsgrid.dimension.standard"
+class = "Time"
+description = "Time dimension, 2012 hourly UTC, period-ending, starts at Hour 5, with DST, 8760, drop Dec 31, total value"
+time_type = "datetime"
+measurement_type = "total"
+str_format = "%Y-%m-%d %H:%M:%S"
+frequency = "P0DT1H0M0.000000S"
+leap_day_adjustment = "dropDec31"
+time_interval_type = "period_ending"
+timezone = "UTC"
+ranges = [{start = "2012-01-01 05:00:00", end = "2012-12-31 04:00:00"}]
 
 
