--- a/dsgrid_project/project.toml
+++ b/dsgrid_project/project.toml
@@ -7,23 +7,23 @@ project_id = "dsgrid_conus_2022"
 # ------------------------------------------------------
 # Input Datasets Dimensions
 # ------------------------------------------------------
-[input_datasets]
-benchmark = [] # ignoring this for now
-historical = [] # ignoring this for now
+# [datasets]
+# benchmark = [] # ignoring this for now
+# historical = [] # ignoring this for now
 
-[[input_datasets.datasets]]
+[[datasets]]
 dataset_id = "tempo-standard-scenarios-2021"
 dataset_type = "sector_model"
 model_sector = "tempo"
 version = "1.0.0"
 
-[[input_datasets.datasets]]
+[[datasets]]
 dataset_id = "resstock-standard-scenarios-2021"
 dataset_type = "sector_model"
 model_sector = "resstock"
 version = "1.0.0"
 
-[[input_datasets.datasets]]
+[[datasets]]
 dataset_id = "comstock-standard-scenarios-2021"
 dataset_type = "sector_model"
 model_sector = "comstock"
@@ -43,14 +43,14 @@ dimension_id = "standard_scenarios_2021_sectors_-_com-res-tra-only__e1a83d86-2c7
 type = "sector"
 version = "1.0.0"
 
-[[dimensions.base_dimensions]] # TODO
-dimension_id = ""
+[[dimensions.base_dimensions]]
+dimension_id = "conus-2022-detailed-subsectors__d285bf0f-2aa0-4c4a-a7cb-81fc03239516"
 type = "subsector"
 version = "1.0.0"
 
-[[dimensions.base_dimensions]] # TODO
-dimension_id = ""
-type = "end_use"
+[[dimensions.base_dimensions]]
+dimension_id = "conus-2022-detailed-end-uses__49496f0b-eaa8-4f53-a325-d28c555178e1"
+type = "metric"
 version = "1.0.0"
 
 [[dimensions.base_dimensions]]
@@ -63,9 +63,8 @@ dimension_id = "model_years_2010_to_2050_with_2_year_intervals__b26a5cd8-816c-44
 type = "model_year"
 version = "1.0.0"
 
-# TODO: Replace with new dimension_id because old dimension name was not accurate
 [[dimensions.base_dimensions]]
-dimension_id = ""
+dimension_id = "dsgrid_conus_2022_scenarios__fcfa2979-d6c7-4811-9879-4ba09fe86777"
 type = "scenario"
 version = "1.0.0"
 
@@ -75,7 +74,7 @@ type = "data_source"
 version = "1.0.0"
 
 [[dimensions.base_dimensions]]
-dimension_id = "time-2012-utc-houlry-periodbeginning-nodst-noleapdayadjustment-mean__60cb33cb-0951-4ca1-8987-17ffe0903318"
+dimension_id = "time-2012-utc-houlry-periodbeginning-nodst-noleapdayadjustment-total__28b148e2-1dd4-461b-abe8-484addd3d553"
 type = "time"
 version = "1.0.0"
 
@@ -83,17 +82,17 @@ version = "1.0.0"
 # Supplemental Dimensions
 # ------------------------------------------------------
 [[dimensions.supplemental_dimensions]]
-dimension_id = "us_states__2bae0844-b0d3-4bf0-9d15-d9d969dee774"
+dimension_id = "us_states__caef7924-b019-4081-a08f-5da8f451ed23"
 type = "geography"
 version = "1.0.0"
 
 [[dimensions.supplemental_dimensions]]
-dimension_id = "us_census_regions__899a4862-883d-4f8f-820e-3921db84ea8e"
+dimension_id = "us_census_regions__81589d89-7575-4ac2-8ee3-4a3f24e1595f"
 type = "geography"
 version = "1.0.0"
 
 [[dimensions.supplemental_dimensions]]
-dimension_id = "us_census_divisions__6e2dcd43-5f14-45b1-b850-f289673d89c7"
+dimension_id = "us_census_divisions__c98c6bb0-5c5a-4d36-971e-5082cb453cea"
 type = "geography"
 version = "1.0.0"
 
