--- a/dsgrid_project/datasets/sector_models/resstock/dimensions.toml
+++ b/dsgrid_project/datasets/sector_models/resstock/dimensions.toml
@@ -1,15 +1,15 @@
 # ------------------------------------------------------
 # ResStock AMY2012 MY2018 CONUS 2022
 # ------------------------------------------------------
-[[dimensions]]
-type = "geography"
-name = "conus_2022-resstock_US_county_FIP"
-file = "dimensions/conus_2022-resstock_geography_county_fips.csv"
-module = "dsgrid.dimension.standard"
-class = "County"
-description = """
-CONUS 2022 - ResStock US county in original FIP code (N=3,107), ResStock not in 1 county (G4803010: TX, Loving County).
-"""
+# [[dimensions]] # already exists
+# type = "geography"
+# name = "conus_2022-resstock_US_county_FIP"
+# file = "dimensions/conus_2022-resstock_geography_county_fips.csv"
+# module = "dsgrid.dimension.standard"
+# class = "County"
+# description = """
+# CONUS 2022 - ResStock US county in original FIP code (N=3,107), ResStock not in 1 county (G4803010: TX, Loving County).
+# """
 
 [[dimensions]]
 type = "sector"
@@ -43,15 +43,15 @@ CONUS 2022 - ResStock end uses (N=48, 5 fuel types)
 
 [[dimensions]]
 type = "scenario"
-name = "Conus-2022"
-file = "dimensions/scenario_conus_2022.csv"
+name = "Conus-2022-reference"
+file = "dimensions/scenario_conus_2022_reference.csv"
 module = "dsgrid.dimension.standard"
 class = "Scenario"
 description = """
-Scenario: CONUS (Continental U.S.) 2022
+Scenario: CONUS (Continental U.S.) 2022 Reference
 """
 
-[[dimensions]]
+[[dimensions]] # already exists
 type = "data_source"
 name = "ResStock-Data-Source"
 file = "dimensions/data_source_resstock.csv"
@@ -82,11 +82,11 @@ Model year, 2018 only
 """
 
 [[dimensions]]
-name = "Time-2012-UTC-8787-hourly-periodEnding-total-Hour6Start"
+name = "Time-2012-UTC-8787-hourly-periodEnding-total-Hour6Start-localRangesTZ"
 type = "time"
 module = "dsgrid.dimension.standard"
 class = "Time"
-description = "Time dimension, 2012 hourly UTC, period-ending, starts at Hour 6, 8787 timestamps, total value"
+description = "Time dimension, 2012 hourly UTC, period-ending, starts at Hour 6, 8784 timestamps, total value, local ranges_timezone"
 time_type = "datetime"
 measurement_type = "total"
 str_format = "%Y-%m-%d %H:%M:%S"
@@ -94,6 +94,7 @@ frequency = "P0DT1H0M0.000000S"
 leap_day_adjustment = "none"
 time_interval_type = "period_ending"
 timezone = "UTC"
-ranges = [{start = "2012-01-01 06:00:00", end = "2013-01-01 08:00:00"}]
+ranges = [{start = "2012-01-01 01:00:00", end = "2013-01-01 00:00:00"}]
+ranges_timezone = "LOCAL"
 
 
